# karpathy-quant

./: .gitignore  .gitmodules  README.md  analysis.ipynb  gate_failure_audit.py  log_result.py  prepare.py  program.md  pyproject.toml  running_best.py  strategy.py  test_lookahead.py  universe_gdxj_2026.json  universe_ndx100_2024.json  universe_sp100_2024.json  universe_sp400_2024.json  universe_sp600_2024.json  universe_xbi_2026.json  universe_xlk_2026.json  walkforward.py
.claude/commands/: autoresearch-all.md
.claude/hooks/: auto-pr-on-push.py
.claude/skills/deep-autoresearch/: SKILL.md
.claude/skills/quant-autoresearch/: SKILL.md
.claude/skills/quant-autoresearch-all/: SKILL.md
summaries/: 0421-103701.md  0421-103702.md  0421-103704.md  0421-103705.md  0421-103803.md  0421-212701.md  0421-212702.md  0421-212704.md  0421-212705.md  0423-134050.md  0423-134051.md  0423-134052.md  0423-134053.md  0423-134054.md  0423-134128.md  0423-134129.md  0423-134130.md  0423-134155.md  0423-134158.md  0423-134159.md  0423-154130.md  0423-154131.md  0423-154133.md  0423-154209.md  0423-154221.md  0423-154223.md  0424-213628.md  0425-105702.md  0425-105744.md  0425-110207.md  0426-081113.md  0426-081114.md  0426-081115.md  0426-081732.md  0426-081733.md  0426-104420.md  0426-193923.md  0426-193924.md  0426-193928.md  0426-200935.md  (+62 more)
